added some intro to chapter 1

--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -130,7 +130,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021 - 2022: Last compiled: 2022-12-01}
+\date{2021 - 2022: Last compiled: 2022-12-04}
 
 \begin{document}
 \maketitle
@@ -240,6 +240,21 @@ Contributions are welcomed, feel free to open a pull-request in github for small
 
 \hypertarget{scientific-goals-methods-and-knowledge}{%
 \chapter{Scientific Goals, Methods and Knowledge}\label{scientific-goals-methods-and-knowledge}}
+
+To gain knowledge about the world, the universe, and the rules behind the phenomena that shape them, we often require taking measurements about the entities we seek to understand. We can indeed play with many of them: we can take a rock and throw it, we can dissect a mouse or mix multiple liquids. However, to compare rocks, mice or liquids, we must take measurements that allow us to tell their differences and commonalities. This information, these data, are not the entities themselves, and when we work with them, we stop playing with the \emph{real} entities. We begin to play with shadows, and two different objects can certainly project the same shadow. The relationships showcased by these entities are not contained in the data but in the reality they live on, of which the data is merely a blurry shadow of reality. Therefore, data science works with the shadows of real objects, and this practice involves assessing risks, identifying mistakes and avoiding situations of appearance of knowledge.
+
+In this course, we will introduce central topics of the scientific method and translate practices employed in natural sciences to the domain of data science. Such practices are meant to control the plethora of considerations that must be bore in mind when playing with shadows. From the confirmation of hypothesis, asymmetries of explanation and causality, to the experimental control techniques and their relationship with surrogate variables, confounders and colliders.
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{Figures/plato_cave} 
+
+}
+
+\caption{\href{https://en.wikipedia.org/wiki/Allegory_of_the_cave}{Allegory of the cave} from the Greek philosopher Plato. ``Plato describes a group of people who have lived chained to the wall of a cave all their lives, facing a blank wall. The people watch shadows projected on the wall from objects passing in front of a fire behind them and give names to these shadows. The shadows are the prisoners' reality, but are not accurate representations of the real world. The shadows represent the fragment of reality that we can normally perceive through our senses, while the objects under the sun represent the true forms of objects that we can only perceive through reason. Three higher levels exist: the natural sciences; mathematics, geometry, and deductive logic; and the theory of forms.'' Source: \href{https://commons.wikimedia.org/wiki/File:An_Illustration_of_The_Allegory_of_the_Cave,_from_Plato’s_Republic.jpg}{Wikimedia, by user 4edges}.}\label{fig:pcave}
+\end{figure}
 
 \hypertarget{what-is-science}{%
 \section{What is Science?}\label{what-is-science}}
