--- a/book.bib
+++ b/book.bib
@@ -779,3 +779,19 @@ publisher={University of Prince Edward Island}
   year={2013},
   publisher={" O'Reilly Media, Inc."}
 }
+
+@misc{reutersUNInvestigators,
+	author = {Tom Miles},
+	title = {{U}.{N}. investigators cite {F}acebook role in {M}yanmar crisis --- reuters.com},
+	howpublished = {\url{https://www.reuters.com/article/us-myanmar-rohingya-facebook-idUKKCN1GO2PN}},
+	year = {2018},
+	note = {[Accessed 04-Dec-2022]},
+}
+
+@misc{nytimesGenocideIncited,
+	author = {Paul Mozur},
+	title = {{A} {G}enocide {I}ncited on {F}acebook, {W}ith {P}osts {F}rom {M}yanmar’s {M}ilitary ({P}ublished 2018) --- nytimes.com},
+	howpublished = {\url{https://www.nytimes.com/2018/10/15/technology/myanmar-facebook-genocide.html}},
+	year = {2018},
+	note = {[Accessed 04-Dec-2022]},
+}
