--- a/book.bib
+++ b/book.bib
@@ -779,3 +779,9 @@ publisher={University of Prince Edward Island}
   year={2013},
   publisher={" O'Reilly Media, Inc."}
 }
+
+
+
+@misc{reutersUN2018, title={{U}.{N}. investigators cite {F}acebook role in {M}yanmar crisis}, url={https://www.reuters.com/article/us-myanmar-rohingya-facebook-idUKKCN1GO2PN}, journal={Reuters}, author={Miles, Tom}, year={2018}}
+
+@misc{nytimesGenocide2018, title={{A} {G}enocide {I}ncited on {F}acebook, {W}ith {P}osts {F}rom {M}yanmar's {M}ilitary}, url={https://www.nytimes.com/2018/10/15/technology/myanmar-facebook-genocide.html}, journal={New York Times}, author={Mozur, Paul}, year={2018}}
