--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -2785,6 +2785,22 @@ For data science, data ethics asks questions such as:
 \hypertarget{ethic-examples}{%
 \section{Examples}\label{ethic-examples}}
 
+\hypertarget{a-genocide-incited-on-facebook}{%
+\subsection{A Genocide Incited on Facebook}\label{a-genocide-incited-on-facebook}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{Figures/fb-genocide} 
+
+}
+
+\caption{Headline of the article published in The New York Times regarding the genocide of Rohingya people in Myanmar.}\label{fig:fb-genocide}
+\end{figure}
+
+In 2018, a planned campaign from Myanmar military personnel turned the social network Facebook into a tool for encouraging ethnic cleansing and systematic targeting of the Muslim Rohingya minority group. The military exploited the wide reach of Facebook among Myanmar's internet users to propagate anty-Rohingya propaganda, inciting murders, rapes. In turn, this translated into the largest forced human migration events in recent history \citep{nytimesGenocide2018}. 700.000 Rohingya fled the country in a year.
+
+The chairman of the U.N. Independent International Fact-Finding Mission on Myanmar stated that Facebook played a ``determining role'' in the Rohingya genocide, and Facebook has been accused of enabling the spread of Islamophobic content which targets the Rohingya people \citep{reutersUN2018}. In 2021, Facebook removed accounts which were owned by the Myanmar Armed Forces and banned the account from Myanmar military from their platform. In December 2021, a group of around one hundred Rohingya refugees launched a lawsuit against Facebook.
+
 \hypertarget{the-theranos-scandal---a-drop-of-blood-for-hundreds-of-different-assays}{%
 \subsection{The Theranos scandal - A drop of blood for hundreds of different assays}\label{the-theranos-scandal---a-drop-of-blood-for-hundreds-of-different-assays}}
 
