--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 --- 
 title: "Applied Philosophy of Science and Data Ethics"
 author: ["Dr. Carlos Vega"]
-date: "2021 - 2022: Last compiled: `r Sys.Date()`"
+date: "2021 - 2023: Last compiled: `r Sys.Date()`"
 site: bookdown::bookdown_site
 output: 
   bookdown::gitbook:
@@ -68,8 +68,9 @@ Under the following terms:
 - **No additional restrictions**: You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.
 
 ## About the author {-}
+Since October 2023 [Carlos Vega](https://researchportal.lih.lu/en/persons/carlos-vega) works as a Research Engineer in Digital Health at the **Luxembourg Institute of Health** (LIH) in the IT Expertise in Health Data team of the Data Integration and Analysis Unit led by the CMIO (Chief Medical Information Officer) Dr. Maximilian Fünfgeld.
 
-Since September 2018, [Carlos Vega](https://wwwen.uni.lu/lcsb/people/carlos_vega_moreno) works as a postdoctoral researcher in the Bioinformatics Core Group led by Prof. Dr Reinhard Schneider at the Luxembourg Centre for Systems Biomedicine (L.C.S.B) at the University of Luxembourg. 
+From 2018 until September 2023, he worked as a postdoctoral researcher in the Bioinformatics Core Group led by Prof. Dr Reinhard Schneider at the **Luxembourg Centre for Systems Biomedicine** (LCSB) at the University of Luxembourg. 
 
 Previously, he worked at the Autonomous University of Madrid (UAM) researching high-performance solutions for big data analysis as well as anomaly detection methodologies. He received his B.Sc (2013), M.Sc (2014) and PhD (2018 with *cum laude* and industrial mentions) degrees in Computer Science Engineering from UAM. In 2012 he joined the High-Performance Computing and Networking Research Group (HPCN) led by Prof. Dr Javier Aracil, first as a student and later as a researcher as part of the Network of Excellence InterNet Science European project. During his PhD (2014 - 2017), he continued his work at the HPCN group as a technical researcher for the project TRÁFICA and the European projects Fed4Fire and dReDBox, among others. At the same time, he worked at [Naudit](https://www.naudit.es/en) (2015 - 2018) applying his research in computer network auditing projects with different enterprises. In 2022, he became a senior member of the Institute of Electrical and Electronics Engineers (IEEE).
 
