--- a/preamble.tex
+++ b/preamble.tex
@@ -7,6 +7,8 @@
 \usepackage{caption}
 \usepackage{fancyhdr}
 
+\usepackage{fontspec}
+\renewcommand*\familydefault{\rmdefault}
 
 \makeatletter
 \def\thm@space@setup{%
