small changes, remove under construction indicators

--- a/03-ScientificInference.Rmd
+++ b/03-ScientificInference.Rmd
@@ -1,5 +1,7 @@
 # Scientific Inference
 
+> “Knowledge can be communicated, but not wisdom. One can find it, live it, be fortified by it, do wonders through it, but one cannot communicate and teach it.” --- Hermann Hesse
+
 ## Overview
 
 Humans have a natural ability to conjecture and spot relationships about the world, *jumping* from hypotheses to conclusions. The scientific attitude is to keep such *jumps* under control and use a well defined procedure to arrive to a conclusion from an hypothesis. In this chapter we will examine in detail those procedures.
